// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav should render 1`] = `
<SideNav
  aria-label="Navigation"
  translateById={[Function]}
>
  <aside
    className="bx--side-nav bx--side-nav--expanded"
  >
    <nav
      aria-label="Navigation"
      className="bx--side-nav__navigation"
      role="navigation"
    >
      <h2>
        Navigation
      </h2>
      <SideNavFooter
        assistiveText="Close"
        isExpanded={true}
        onToggle={[Function]}
      >
        <footer
          className="bx--side-nav__footer"
        >
          <button
            className="bx--side-nav__toggle"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <div
              className="bx--side-nav__icon"
            >
              <Close>
                <svg
                  aria-hidden="true"
                  height="20"
                  viewBox="0 0 32 32"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.414 16L24 9.414 22.586 8 16 14.586 9.414 8 8 9.414 14.586 16 8 22.586 9.414 24 16 17.414 22.586 24 24 22.586 17.414 16z"
                  />
                </svg>
              </Close>
            </div>
            <span
              className="bx--assistive-text"
            >
              Close
            </span>
          </button>
        </footer>
      </SideNavFooter>
    </nav>
  </aside>
</SideNav>
`;

exports[`SideNav should toggle the menu expansion state when clicking on the footer 1`] = `
<SideNav
  aria-label="Navigation"
  translateById={[Function]}
>
  <aside
    className="bx--side-nav"
  >
    <nav
      aria-label="Navigation"
      className="bx--side-nav__navigation"
      role="navigation"
    >
      <h2>
        Navigation
      </h2>
      <SideNavFooter
        assistiveText="Open"
        isExpanded={false}
        onToggle={[Function]}
      >
        <footer
          className="bx--side-nav__footer"
        >
          <button
            className="bx--side-nav__toggle"
            onClick={[Function]}
            title="Open"
            type="button"
          >
            <div
              className="bx--side-nav__icon"
            >
              <ChevronRight>
                <svg
                  aria-hidden="true"
                  height="20"
                  viewBox="0 0 32 32"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 16L12 26l-1.414-1.414L19.172 16l-8.586-8.586L12 6l10 10z"
                  />
                </svg>
              </ChevronRight>
            </div>
            <span
              className="bx--assistive-text"
            >
              Open
            </span>
          </button>
        </footer>
      </SideNavFooter>
    </nav>
  </aside>
</SideNav>
`;
